[gd_scene load_steps=10 format=3 uid="uid://co7xpnrb6fa6b"]

[ext_resource type="PackedScene" uid="uid://ks7hrn0lw04d" path="res://prefabs/2digit_input.tscn" id="1_5sghs"]
[ext_resource type="PackedScene" uid="uid://6liunmr3rww5" path="res://prefabs/4digit_input.tscn" id="1_8d55c"]
[ext_resource type="Script" uid="uid://bv1nua1wcmg11" path="res://scripts/time_input.gd" id="1_ormei"]
[ext_resource type="Texture2D" uid="uid://dcqobca5esewm" path="res://textures/text_annus.png" id="3_0srpd"]
[ext_resource type="Texture2D" uid="uid://bvalxcwbnufqj" path="res://textures/text_month.png" id="4_3beix"]
[ext_resource type="Texture2D" uid="uid://dht4tw4qsfio1" path="res://textures/text_day.png" id="4_iob55"]
[ext_resource type="Texture2D" uid="uid://lv8ypv3gej46" path="res://textures/text_enter.png" id="6_5umms"]
[ext_resource type="Texture2D" uid="uid://lg1pqail2j81" path="res://textures/text_enter_hover.png" id="7_3g8l8"]

[sub_resource type="CanvasTexture" id="CanvasTexture_cokle"]

[node name="TimeInput" type="Node2D"]
script = ExtResource("1_ormei")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_cokle")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="YearInput" parent="CanvasLayer/CenterContainer/VBoxContainer" instance=ExtResource("1_8d55c")]
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MonthInput" parent="CanvasLayer/CenterContainer/VBoxContainer/CenterContainer2" instance=ExtResource("1_5sghs")]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="DayInput" parent="CanvasLayer/CenterContainer/VBoxContainer/CenterContainer" instance=ExtResource("1_5sghs")]
layout_mode = 2

[node name="TextYear" type="TextureRect" parent="CanvasLayer"]
self_modulate = Color(0.635281, 0.268544, 0.0735159, 1)
offset_left = 445.0
offset_top = 21.0
offset_right = 629.0
offset_bottom = 99.0
texture = ExtResource("3_0srpd")

[node name="TextMonth" type="TextureRect" parent="CanvasLayer"]
self_modulate = Color(0.635281, 0.268544, 0.0735159, 1)
offset_left = 691.0
offset_top = 235.0
offset_right = 875.0
offset_bottom = 313.0
rotation = 1.5708
texture = ExtResource("4_3beix")

[node name="TextDay" type="TextureRect" parent="CanvasLayer"]
self_modulate = Color(0.635281, 0.268544, 0.0735159, 1)
offset_left = 461.0
offset_top = 609.0
offset_right = 645.0
offset_bottom = 687.0
rotation = -1.5708
texture = ExtResource("4_iob55")

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
self_modulate = Color(0.957659, 0.668636, 0.403513, 1)
offset_left = 749.0
offset_top = 498.0
offset_right = 983.0
offset_bottom = 576.0
texture_normal = ExtResource("6_5umms")
texture_hover = ExtResource("7_3g8l8")

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 39.0
offset_top = 34.0
offset_right = 124.0
offset_bottom = 76.0
text = " Return "

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
